# Parallelized-Ray-Tracing-In-One-Weekend

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.trunk/: trunk.yaml
.trunk/configs/: .clang-format
benchmark/: image_size.json  map_size.json  sample.json
benchmark/cuda/: cuda.json  cuda_block_size.json
benchmark/omp/: omp_collapse.json  omp_numa.json  omp_outer.json  omp_outer_cyclic.json  omp_outer_dynamic_cyclic.json  omp_single_collapse.json
benchmark/serial/: serial.json  serial_100_max_depth.json  serial_50_samples.json  serial_map_size.json  serial_single.json
cuda/: CMakeLists.txt  DETAILS.md  README.md
cuda/deviceQuery/: .gitignore  Makefile  deviceQuery.cpp
cuda/deviceQuery/common/: helper_cuda.h  helper_string.h
cuda/include/InOneWeekend/: hittable.h  hittable_list.h  material.h  sphere.h
cuda/include/common/: aabb.h  camera.h  def.h  helper_cuda.h  perlin.h  ray.h  rtweekend.h  texture.h  vec3.h
cuda/src/: main.cu
cuda/src/InOneWeekend/: hittable.h  hittable_list.h  main.cu  material.h  sphere.h
cuda/src/common/: camera.h  helper_cuda.h  ray.h  rtweekend.h  vec3.h
double/: CMakeLists.txt
double/openmp/: CMakeLists.txt
double/openmp/include/InOneWeekend/: hittable_list.h
double/openmp/include/common/: camera.h
double/serial/: CMakeLists.txt
double/serial/src/: main.cc
openmp/: CMakeLists.txt  README.md
openmp/include/InOneWeekend/: hittable.h  hittable_list.h  material.h  sphere.h
openmp/include/common/: camera.h  color.h  def.h  perlin.h  ray.h  rtweekend.h  vec3.h
openmp/src/: main.cc
openmp/src/InOneWeekend/: hittable.h  hittable_list.h  main.cc  material.h
openmp/src/TheNextWeek/: aarect.h  constant_medium.h  hittable.h  hittable_list.h  main.cc  material.h  moving_sphere.h  sphere.h
openmp/src/TheRestOfYourLife/: aarect.h  box.h  bvh.h  cos_cubed.cc  cos_density.cc  hittable.h  hittable_list.h  integrate_x_sq.cc  main.cc  material.h  onb.h  pdf.h  pi.cc  sphere.h  sphere_importance.cc  sphere_plot.cc
openmp/src/common/: aabb.h  camera.h  color.h  texture.h  vec3.h
scripts/: benchmark_cuda.sh  benchmark_image_size.sh  benchmark_map_size.sh  benchmark_omp.sh  benchmark_serial.sh
scripts/visualization/: plot_efficiency.py  plot_execution_time.py  plot_execution_time_for_image_size.py  plot_execution_time_for_map_size.py  plot_speed_up.py
serial/: CMakeLists.txt
serial/include/InOneWeekend/: hittable.h  hittable_list.h  material.h  sphere.h
serial/include/common/: aabb.h  camera.h  def.h  ray.h  rtweekend.h  texture.h  vec3.h
serial/src/: main.cc
single/: CMakeLists.txt
single/openmp/: CMakeLists.txt
single/openmp/include/common/: vec3.h
single/serial/: CMakeLists.txt
single/serial/include/InOneWeekend/: hittable.h  hittable_list.h  material.h  sphere.h
single/serial/include/common/: aabb.h  camera.h  perlin.h  ray.h  rtweekend.h  texture.h  vec3.h
single/serial/src/: main.cc
